# butfit-ifj

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  LL_buin_fn.c  LL_buin_fn.h  Makefile  README.md  ast.c  ast.h  codegen.c  codegen.h  codegen_definitions.h  dstring.c  dstring.h  error.c  error.h  git_survival_guide.md  lexer_test.cpp  lexer_test.h  main.c  makefile  parser.c  parser.h  precedence_analysis.c  precedence_analysis.h  rozdelenie  scanner.c  scanner.h  semantic.c  semantic.h  semantic_check.c  semantic_check.h  stack.c  stack.h  symtable.c  symtable.h  token.h
src/: AST.h  code_gen  code_gen.c  code_gen.h  common.h  dstring.c  dstring.h  error.h  expressions.h  input.txt  lexer.c  lexer.h  main.c  main.h  makefile  output.txt  parser  parser.c  parser.h  token.h
tests/: input11.txt  input13.txt  test.sh  test1.ifj24  test10.ifj24  test11.ifj24  test12.ifj24  test13.ifj24  test14.ifj24  test15.ifj24  test16.ifj24  test17.ifj24  test18.ifj24  test19.ifj24  test2.ifj24  test20.ifj24  test3.ifj24  test4.ifj24  test5.ifj24  test6.ifj24  test7.ifj24  test8.ifj24  test9.ifj24
